--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <title>React App</title>
   </head>
   <body>
+    <Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(parchment.jpg);background-position:center center;background-repeat:no-repeat;background-attachment:fixed;}</Style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
