--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,17 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
     -->
-    <title>React App</title>
+    <title>Pathfinder Character Sheet</title>
+
   </head>
   <body>
-    <Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(parchment.jpg);background-position:center center;background-repeat:no-repeat;background-attachment:fixed;}</Style>
+    <Style type='text/css' >body{background-color:rgb(0,0,0);background-image:url(parchment.jpg);background-position:center center;background-repeat:repeat;background-attachment:fixed;}</Style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
